@@ -18,10 +18,10 @@
 
 package org.restlet.util;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.TreeMap;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.logging.Logger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -328,25 +328,25 @@ public class Template {
     }
 
     /** The pattern to use for formatting or parsing. */
-    private String pattern;
+    private volatile String pattern;
 
     /** The default variable to use when no matching variable descriptor exists. */
-    private Variable defaultVariable;
+    private volatile Variable defaultVariable;
 
     /** The logger to use. */
-    private Logger logger;
+    private volatile Logger logger;
 
     /** The matching mode to use when parsing a formatted reference. */
-    private int matchingMode;
+    private volatile int matchingMode;
 
     /** The map of variables associated to the route's template. */
-    private Map<String, Variable> variables;
+    private final Map<String, Variable> variables;
 
     /** The internal Regex pattern. */
-    private Pattern regexPattern;
+    private volatile Pattern regexPattern;
 
     /** The sequence of Regex variable names as found in the pattern string. */
-    private List<String> regexVariables;
+    private final List<String> regexVariables;
 
     /**
      * Default constructor. Each variable matches any sequence of characters by
@@ -406,9 +406,9 @@ public class Template {
         this.defaultVariable = new Variable(defaultType, defaultDefaultValue,
                 defaultRequired, defaultFixed);
         this.matchingMode = matchingMode;
-        this.variables = new TreeMap<String, Variable>();
+        this.variables = new ConcurrentHashMap<String, Variable>();
         this.regexPattern = null;
-        this.regexVariables = null;
+        this.regexVariables = new CopyOnWriteArrayList<String>();
     }
 
     /**
@@ -533,7 +533,7 @@ public class Template {
      *                The URI pattern.
      * @return The Regex pattern.
      */
-    private Pattern getRegexPattern() {
+    private synchronized Pattern getRegexPattern() {
         if (this.regexPattern == null) {
             StringBuilder patternBuffer = new StringBuilder();
             StringBuilder varBuffer = null;
@@ -609,7 +609,7 @@ public class Template {
      *                The character to quote if necessary.
      * @return The quoted character.
      */
-    private String quote(char character) {
+    private static String quote(char character) {
         switch (character) {
         case '[':
             return "\\[";
@@ -656,8 +656,6 @@ public class Template {
      *         string.
      */
     private List<String> getRegexVariables() {
-        if (this.regexVariables == null)
-            this.regexVariables = new ArrayList<String>();
         return this.regexVariables;
     }
 
@@ -670,7 +668,8 @@ public class Template {
      *                The reference to use as a model.
      * @return The content corresponding to a reference property.
      */
-    private String getReferenceContent(String partName, Reference reference) {
+    private static String getReferenceContent(String partName,
+            Reference reference) {
         String result = null;
 
         if (reference != null) {
@@ -706,7 +705,7 @@ public class Template {
      *                The variable.
      * @return The Regex pattern string corresponding to a variable.
      */
-    private String getVariableRegex(Variable variable) {
+    private static String getVariableRegex(Variable variable) {
         String result = null;
 
         if (variable.isFixed()) {
@@ -787,7 +786,7 @@ public class Template {
      * @param required
      *                Indicates if the group is required.
      */
-    private void appendClass(StringBuilder pattern, String content,
+    private static void appendClass(StringBuilder pattern, String content,
             boolean required) {
 
         pattern.append("(");
@@ -821,7 +820,7 @@ public class Template {
      * @param required
      *                Indicates if the group is required.
      */
-    private void appendGroup(StringBuilder pattern, String content,
+    private static void appendGroup(StringBuilder pattern, String content,
             boolean required) {
         pattern.append("((?:").append(content).append(')');
 
